# friction-flow

./: .cursor_rules  .cursorrules  .gitignore  README.md  best_cartpole_model.pth  config.yaml  inputs.yaml  pyproject.toml  requirements.txt  setup.py
agent_factory/: agent_factory.py  base_agent.py  specialized_agent.py
bayes/: batch_approx.py  bayes_minst_trainer.py  coin_flipper.py  learning_rate_adapt.py
brain/: brain_layer.py
casa/: 01_politeness.py
docs/: Narrative-driven MAS Dynamics.md  bias.md  faber.txt  maml.md  mini-schoof-analysis.md  mini-schoof-results.txt  mini-schoof.txt  schoof.txt  schoof_analysis_report.md
friction_flow/: __init__.py  mind.py
gym/: acrobot.py  cart_pole.py  cart_pole_personalities.py  hopper.py  mountaincar.py
mas_learn/: config.py  demo.py  orchestrator.py
pocs/: ada_society.py  adaptive_mnist_demo.py  dbn_mnist_demo.py  deep_belief_network.py  makemore_names.py  maml_model_agnostic_meta_learning.py  nfs_bias_research.py  nfs_simple_lab_scenario.py  pca_brainstates.py  pca_butterflies.py  pca_minst.py  poc_async.py  poc_hopfield_memory.py  transf.py
results/: events.json  metrics.json  summary.json
simulation_results/: events.json  metrics.json  summary.json
sound-interaction/: resonance_space.py
src/: bayes_updating.py  belief_visualizer.py  bias_detection.py  bias_mas_dynamics.py  config.py  embedding_cache.py  esh_status_dynamics.py  gat_social_network.py  language_models.py  logging_config.py  maml_model_agnostic_meta_learning.py  model_agnostic_meta_learning.py  nfd_three_story_evolve.md  nfs_story_waves.py  (+3 more)
(+63 files in other folders)
